Trying to fix border radius when hover on list elements inside modal. Not showing backdrop when search doesn't have data

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -29,6 +29,10 @@ li:hover {
     background-color: rgba(15, 15, 15, 0.5);
 }
 
+li:hover:first {
+    border-radius: inherit;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
